@@ -2,6 +2,7 @@ Version 1.3.0
 [list]
 [*]Added climate zones. This can be configured at world creation, and is enabled by default. This means biomes will now be clustered according to their climate: Snowy, cold, temperate, tropical, or arid. Climates are randomly distributed, then smoothed to prevent disjointed transitions between climates. A full list of which biomes belong to which climate is available in the OP.
 [*]Added height-dependent snowfall in cold biomes. Snow will fall anywhere in these biomes above y=95. This only affects new worlds.
+[*]Added a new surface builder system which lets me create more complex systems defining how each biome looks and helps decrease the amount of hardcoded data there is per biome. At the moment this system does not affect much of what the player will see, but in future updates I will make more use of this system.
 [*]Added frozen springs as a new snowy biome which can generate reeds.
 [*]Added boreal forest as a new cold taiga variant (wolves) and renamed the old boreal forest to temperate forest.
 [*]Added mangal (mangrove forest) as a new temperate jungle variant (temples, jungle spiders, reeds).
@@ -19,9 +20,10 @@ Version 1.3.0
 [*]Changed (increased) possible biome size ranges to 0.5x to 4x vanilla (Original BTA was 2x, vanilla large biomes is 4x). As a part of this, small world types have been deprecated as biome size information is now handled through generator options. These world types will continue to function for existing worlds but may no longer be created.
 [*]Changed the default biome size to vanilla sized biomes as the new climate zone system tends to spread out dissimilar biomes further than before.
 [*]Changed the display name of a few biomes in world configuration to match the generic name rather than specific sub-biome names. Internal biome names remain the same, and are still listed in the OP (internal biome names only concern texture pack authors using MCPatcher).
-[*]Removed the ability for better shorelines to spawn in oases. This may create minor seams in surface material but these will be easy to fix manually if you so desire.
+[*]Changed oases to no longer spawn sand from better shorelines. This only affects new worlds.
 [*]Changed biome colors for plains and steppe.
 [*]Changed tundra to no longer be a valid biome for world spawn.
+[*]Changed how badlands generates colored layers in terracotta to be random based on the world seed. This also fixes an issue where badlands sometimes wouldn't generate colored strips at the edge of biomes. This only affects new worlds.
 [*]Fixed an issue where frozen rivers weren't frozen. Any which have generated in your world in the last release that weren't frozen will naturally refreeze as you spend time near them. The biome locations were correct, just not the precipitation data.
 [*]Fixed an issue where wetland hills and willow grove hills would spawn standard rivers within them and not jungle rivers, leading to mismatched water color.
 [*]Fixed an issue where beta and skylands world types always generated vanilla sized biomes, regardless of world configuration settings.
